fix: 统一雷达筛选口径与资讯来源同步状态